@startuml API class diagram

left to right direction
skinparam linetype ortho
'Services'
interface IMessageService {
    +SendMessageAsync(message : IMessage) : Task
}

class MailMessageService{
    -configuration : SMTPConfigModel
    -smtpClient : SmtpClient
    --
    +MailMessageService(configurations : IOptions<SMTPConfigModel>)
    -CreateMailMessage(message : string, to : string) : MailMessage
    -SetupSmtpClient() : void 
}

'Service mappings'
MailMessageService .-|> IMessageService
MailMessageService"1" o-- "1" SMTPConfigModel

IMessageService "1" --> "1" IMessage

'Providers'
interface IMessageProvider{
    +GetRegisterMessage(to: string, key : string) : IMessage
    +GetLoginAttemptMessage(to: string, otp : string) : IMessage
}
'Provider mapping'
IMessageProvider "1" --> "1" IMessage

'Models'
interface IMessage{
    +Message : string
    +To : string
}


class SMTPConfigModel {
    +SenderAddress : string
    +SenderDisplayName : string
    +UserName : string
    +Password : string
    +Host : string
    +Port : string
    +EnableSSL : string
    +UseDefaultCredentials : string
    +IsBodyHtml : string
}

@enduml